Added Update Profile

--- a/register.html
+++ b/register.html
@@ -40,18 +40,23 @@
 			        <!--Body-->
 			        <div class="md-form">
 			            <i class="fa fa-user prefix"></i>
-			            <input type="text" id="form3" class="form-control">
-			            <label for="form3">Your name</label>
+			            <input type="text" id="f_name" class="form-control">
+			            <label for="form3">First name</label>
+			        </div>
+			        <div class="md-form">
+			            <i class="fa fa-user prefix"></i>
+			            <input type="text" id="l_name" class="form-control">
+			            <label for="form3">Last name</label>
 			        </div>
 			        <div class="md-form">
 			            <i class="fa fa-envelope prefix"></i>
-			            <input type="text" id="form2" class="form-control">
+			            <input type="text" id="email" class="form-control">
 			            <label for="form2">Your email</label>
 			        </div>
 
 			        <div class="md-form">
 			            <i class="fa fa-lock prefix"></i>
-			            <input type="password" id="form4" class="form-control">
+			            <input type="password" id="pass" class="form-control">
 			            <label for="form4">Your password</label>
 			        </div>
 
