--- a/login.html
+++ b/login.html
@@ -21,9 +21,8 @@
 		<a class="navbar-brand" href="#">DBMS Project</a>
 	</nav>
 
-	<div class="container-fluid" style="height:70px; background-color: lightblue;"></div>
 
-	<div class="container-fluid" style="background-color: lightblue;">
+	<div class="container-fluid" style="background-color: lightblue;padding-top:12%;min-height:100vh;">
 		<div class="col-sm-4"></div>
 		<div class="container-fluid regform col-sm-4">
 			
@@ -40,13 +39,13 @@
         <!--Body-->
         <div class="md-form">
             <i class="fa fa-envelope prefix"></i>
-            <input type="text" id="form2" class="form-control">
+            <input type="text" id="email" class="form-control">
             <label for="form2">Your email</label>
         </div>
 
         <div class="md-form">
             <i class="fa fa-lock prefix"></i>
-            <input type="password" id="form4" class="form-control">
+            <input type="password" id="pass" class="form-control">
             <label for="form4">Your password</label>
         </div>
 
@@ -72,8 +71,6 @@
 		<div class="col-sm-4"></div>
 
 	</div>
-
-	<div class="container-fluid" style="height:50px; background-color:lightblue;"></div>
 	
     <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
 
