--- a/register.html
+++ b/register.html
@@ -30,34 +30,35 @@
 			<!--Form with header-->
 			<div class="card">
 			    <div class="card-block">
+				    <form id="registerform" action="servlet/Register" method="post">
 
 			        <!--Header-->
 				    <div class="form-header">
 				        <h3><i class="fa fa-user"></i> Register:</h3><hr>
 				    </div>
 			        
-
 			        <!--Body-->
 			        <div class="md-form">
 			            <i class="fa fa-user prefix"></i>
-			            <input type="text" id="form3" class="form-control">
+			            <input type="text" id="form3" class="form-control" name="name">
 			            <label for="form3">Your name</label>
 			        </div>
 			        <div class="md-form">
 			            <i class="fa fa-envelope prefix"></i>
-			            <input type="text" id="form2" class="form-control">
+			            <input type="text" id="form2" class="form-control" name="email">
 			            <label for="form2">Your email</label>
 			        </div>
 
 			        <div class="md-form">
 			            <i class="fa fa-lock prefix"></i>
-			            <input type="password" id="form4" class="form-control">
+			            <input type="password" id="form4" class="form-control" name="pass">
 			            <label for="form4">Your password</label>
 			        </div>
 
 			        <div class="text-xs-center">
-			            <button class="btn btn-primary">Sign up</button>
+			            <button class="btn btn-primary" type="submit" onclick="document.getElementById('registerform').submit()">Sign up</button>
 			        </div>
+			        </form>
 
 			    </div>
 			</div>
