servlet for register updated and update.html editted.

--- a/register.html
+++ b/register.html
@@ -40,23 +40,23 @@
 			        <!--Body-->
 			        <div class="md-form">
 			            <i class="fa fa-user prefix"></i>
-			            <input type="text" id="f_name" class="form-control">
+			            <input type="text" id="f_name" name="fname" class="form-control">
 			            <label for="form3">First name</label>
 			        </div>
 			        <div class="md-form">
 			            <i class="fa fa-user prefix"></i>
-			            <input type="text" id="l_name" class="form-control">
+			            <input type="text" id="l_name" name="lname" class="form-control">
 			            <label for="form3">Last name</label>
 			        </div>
 			        <div class="md-form">
 			            <i class="fa fa-envelope prefix"></i>
-			            <input type="text" id="email" class="form-control">
+			            <input type="text" id="email" name="email" class="form-control">
 			            <label for="form2">Your email</label>
 			        </div>
 
 			        <div class="md-form">
 			            <i class="fa fa-lock prefix"></i>
-			            <input type="password" id="pass" class="form-control">
+			            <input type="password" id="pass" name="pass" class="form-control">
 			            <label for="form4">Your password</label>
 			        </div>
 
