--- a/update.html
+++ b/update.html
@@ -37,7 +37,7 @@
 				        </div>
 
 				        <!--Body-->
-				        <form action="" class="form" method="post">
+				        <form action="" name="updateform" class="form" method="post">
 							<div class="form-group">
 								<div class="col-sm-8">
 									<input type="text" class="form-control" name="f_name" placeholder="First Name" id="f_name">
@@ -49,10 +49,10 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<div class="col-sm-8">
-									<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-								</div>
-							</div>
+								<div class="text-xs-center">
+				            		<button class="btn btn-primary" type="submit" onclick="document.getElementById('updateform').submit()">Update</button>
+				        		</div>
+			        		</div>
 						</form>
 
 				    </div>
